terraform/nat-gateway.tf
resource "aws_eip" "nat" {
  vpc = true

  tags = {
    Name = "nat"
  }
}


resource "aws_nat_gateway" "nat" {
  allocation_id = aws_eip.nat.id
  subnet_id     = aws_subnet.public_sn1.id
  tags = {
    "Name" = "NAT GATE WAY"
  }
  depends_on = [
    aws_internet_gateway.igw
  ]
}
